--- a/bezahlen.html
+++ b/bezahlen.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
 	<script>
 		var countdown;
-		var apiurl = "http://matekasse/";
+		var apiurl = "http://api.matekasse/";
 		let url = new URL(document.URL);
 		let searchParams = new URLSearchParams(url.search);
 		console.log("ID:", searchParams.get('id'));  
