--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<script>
 		const c = document.getElementById('container');
-		const url = 'http://matekasse/getallusers';
+		const url = 'http://api.matekasse/getallusers';
 		let users = 0;
 		var currentrow = null;
 
